Removed bugs